mType/tests/testFiles/error/error/runtimeDivisionByZero.mt
int x = 10;
int y = 0;
int result = x / y;